# dependency-driven-build-action

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  action.yml  get_idf_build_apps_args.py  get_upload_filepatterns.py  pyproject.toml  ruff.toml
.github/workflows/: test-action.yml  test-python-scripts.yml
