[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dependency-driven-build-action"
version = "0.1.0"
description = "Python scripts for dependency-driven-build-action"
requires-python = ">=3.7"
authors = [
    {name = "Fu Hanxi", email = "fuhanxi@espressif.com"},
]

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = [
    'F',   # Pyflakes
    'E',   # pycodestyle
    'W',   # pycodestyle
    'I',   # isort
    'UP',  # pyupgrade
    'YTT', # flake8-2020
    'A',   # flake8-builtins
    'ARG', # flake8-unused-arguments
    'ERA', # eradicate
    'LOG', # flake8-logging
    'RUF', # Ruff-specific rules
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
